# http-path

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs  matcher.rs  path.rs
crates/macros/: Cargo.toml
crates/macros/src/: extractor.rs  lib.rs
crates/macros/src/extractor/: extractor.pest  parser.rs
src/: lib.rs
tests/: extractor_tests.rs  usage.rs
