[package]
name = "http-path"
version.workspace = true
edition.workspace = true

[workspace]
resolver = "2"
members = [
  ".",
  "crates/core",
  "crates/macros",
]
default-members = [
  ".",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
darling = "0.23"
defmt = "1.0"
derive_more = { version = "2.1", default-features = false }
derive-new = { version = "0.7", default-features = false }
frunk = "0.4"
http-path-core = { path = "./crates/core" }
http-path-macros = { path = "./crates/macros" }
pest = { version = "2.8" }
pest_derive = { version = "2.8" }
proc-macro2 = "1.0"
quote = "1.0"
rstest = "0.26"
strum = "0.27"
syn = "2.0"
thiserror = { version = "2.0", default-features = false }

[dependencies]
defmt = { workspace = true, optional = true }
http-path-core.workspace = true
http-path-macros.workspace = true

[features]
defmt = ["dep:defmt", "http-path-core/defmt"]
