[package]
name = "http-path-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
derive_more = { workspace = true, features = ["deref"] }
pest.workspace = true
pest_derive.workspace = true
proc-macro2.workspace = true
quote.workspace = true
strum = { workspace = true, features = ["derive"] }
syn.workspace = true
thiserror.workspace = true

[dev-dependencies]
http-path-core.workspace = true
